src/app/event-list/event/event.component.scss
.event {
  display: flex;
  width: 25rem;
  height: 5rem;
  flex-direction: column;
  border-radius: 0;
  transition: background-color 0.3s ease;
  z-index: 5;
  background: var(--transparent-white);
  cursor: pointer;
  &:hover {
    background-color: var(--warn-color);
  }

  .header {
    display: flex;
    flex-direction: row;
  }

  .event-info {
    padding: 10px;
    display: grid;
    grid-template-columns: 2fr 1fr 1fr;
    .info-item {
      display: flex;
      align-items: center;
      font-size: 1rem;
      gap: 3px;
      mat-icon {
        font-size: 1.5rem;
        place-content: center;
      }
    }
  }

  mat-card-footer {
    display: flex;
    justify-content: space-between;
    padding-top: 8px;
    align-items: center;

    .find-marker-icon {
      font-size: 1.5rem;
      color: black;
      cursor: pointer;
      transition: color 0.2s;
      &:hover {
        color: #8eaccd;
      }
    }
  }
  .owner-icon {
    position: absolute;
    top: 5px;
    right: 5px;
    font-size: 1.3rem;
    color: rgba(0, 0, 0, 0.5);
  }
}

@media (max-width: 768px) {
  .event {
    width: 15rem;
    height:auto;
    .event-info{
      flex-direction: column;
    }
  }
}

